--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
 	"workbench.colorCustomizations": {
-		"activityBar.activeBackground": "#6ec071",
-		"activityBar.background": "#6ec071",
+		"activityBar.activeBackground": "#e599b2",
+		"activityBar.background": "#e599b2",
 		"activityBar.foreground": "#15202b",
 		"activityBar.inactiveForeground": "#15202b99",
-		"activityBarBadge.background": "#6763bb",
-		"activityBarBadge.foreground": "#e7e7e7",
+		"activityBarBadge.background": "#ecf9e6",
+		"activityBarBadge.foreground": "#15202b",
 		"commandCenter.border": "#15202b99",
-		"sash.hoverBorder": "#6ec071",
-		"statusBar.background": "#4caf50",
+		"sash.hoverBorder": "#e599b2",
+		"statusBar.background": "#db7093",
 		"statusBar.foreground": "#15202b",
-		"statusBarItem.hoverBackground": "#3d8b40",
-		"statusBarItem.remoteBackground": "#4caf50",
+		"statusBarItem.hoverBackground": "#d14774",
+		"statusBarItem.remoteBackground": "#db7093",
 		"statusBarItem.remoteForeground": "#15202b",
-		"titleBar.activeBackground": "#4caf50",
+		"titleBar.activeBackground": "#db7093",
 		"titleBar.activeForeground": "#15202b",
-		"titleBar.inactiveBackground": "#4caf5099",
+		"titleBar.inactiveBackground": "#db709399",
 		"titleBar.inactiveForeground": "#15202b99"
 	},
-	"peacock.color": "#4CAF50"
+	"peacock.color": "#DB7093"
 }
