--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,9 @@
 		"titleBar.inactiveBackground": "#db709399",
 		"titleBar.inactiveForeground": "#15202b99"
 	},
-	"peacock.color": "#DB7093"
+	"peacock.color": "#DB7093",
+	"[python]": {
+		"editor.defaultFormatter": "ms-python.black-formatter"
+	},
+	"python.formatting.provider": "none"
 }
