--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,24 @@
 {
 	"workbench.colorCustomizations": {
-		"activityBar.activeBackground": "#e599b2",
-		"activityBar.background": "#e599b2",
-		"activityBar.foreground": "#15202b",
-		"activityBar.inactiveForeground": "#15202b99",
-		"activityBarBadge.background": "#ecf9e6",
-		"activityBarBadge.foreground": "#15202b",
-		"commandCenter.border": "#15202b99",
-		"sash.hoverBorder": "#e599b2",
-		"statusBar.background": "#db7093",
-		"statusBar.foreground": "#15202b",
-		"statusBarItem.hoverBackground": "#d14774",
-		"statusBarItem.remoteBackground": "#db7093",
-		"statusBarItem.remoteForeground": "#15202b",
-		"titleBar.activeBackground": "#db7093",
-		"titleBar.activeForeground": "#15202b",
-		"titleBar.inactiveBackground": "#db709399",
-		"titleBar.inactiveForeground": "#15202b99"
+		"activityBar.activeBackground": "#ab307e",
+		"activityBar.background": "#ab307e",
+		"activityBar.foreground": "#e7e7e7",
+		"activityBar.inactiveForeground": "#e7e7e799",
+		"activityBarBadge.background": "#25320e",
+		"activityBarBadge.foreground": "#e7e7e7",
+		"commandCenter.border": "#e7e7e799",
+		"sash.hoverBorder": "#ab307e",
+		"statusBar.background": "#832561",
+		"statusBar.foreground": "#e7e7e7",
+		"statusBarItem.hoverBackground": "#ab307e",
+		"statusBarItem.remoteBackground": "#832561",
+		"statusBarItem.remoteForeground": "#e7e7e7",
+		"titleBar.activeBackground": "#832561",
+		"titleBar.activeForeground": "#e7e7e7",
+		"titleBar.inactiveBackground": "#83256199",
+		"titleBar.inactiveForeground": "#e7e7e799"
 	},
-	"peacock.color": "#DB7093",
+	"peacock.color": "#832561",
 	"[python]": {
 		"editor.defaultFormatter": "ms-python.black-formatter"
 	},
